<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/SAILSMap" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:id="@+id/zoomin"
            android:src="@drawable/zoominb"
            android:layout_above="@+id/zoomout"
            android:layout_alignParentRight="true" />

        <ImageView
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:id="@+id/zoomout"
            android:baselineAlignBottom="false"
            android:src="@drawable/zoomoutb"
            android:layout_alignTop="@+id/lockcenter"
            android:layout_alignParentRight="true" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/dialogShow"
            android:src="@drawable/option"
            android:layout_above="@+id/lockcenter"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/lockcenter"
            android:src="@drawable/center1"
            android:layout_above="@+id/imageView"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/maplogo"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/distanceView"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_light"
            android:padding="5dp"
            android:textStyle="bold"
            android:background="#80000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_compass_board"
            android:src="@drawable/ic_compass_board"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/distanceView"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_compass_point"
            android:src="@drawable/ic_point"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/distanceView"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_simulation"
            android:id="@+id/customer_simulation"
            android:layout_alignTop="@+id/iv_compass_board"
            android:visibility="invisible"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/set_current_location"
            android:id="@+id/set_start_location"
            android:layout_below="@+id/customer_simulation"
            android:visibility="invisible"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/set_target_location"
            android:id="@+id/set_target_location"
            android:layout_below="@+id/set_start_location"
            android:visibility="invisible"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/shortest_distance_path"
            android:id="@+id/shortest_distance_path"
            android:layout_below="@+id/set_target_location"
            android:visibility="invisible"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/shortest_time_path"
            android:id="@+id/shortest_time_path"
            android:layout_below="@+id/shortest_distance_path"
            android:layout_alignParentStart="false"
            android:visibility="invisible"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:id="@+id/reset_button"
            android:layout_below="@+id/shortest_time_path"
            android:visibility="invisible"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/emergency_simulation"
            android:layout_below="@+id/reset_button"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            android:text="@string/emergency_mode_simulation" />

    </RelativeLayout>

    <Button
        android:id="@+id/stopRoute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_route"
        android:textStyle="bold"
        android:background="@color/list_background_pressed"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>